tests/snapshots/integration__integration_tests__remove__remove_continues_dirty_background.snap
---
source: tests/integration_tests/remove.rs
expression: stderr
---
[36m◎[39m [36mRunning pre-remove project hook @ [1m_REPO_.failed-a[22m[39m
[107m [0m [2m[0m[2m[35mcase[0m[2m [0m[2m[32m'failed-a'[0m[2m [0m[2m[35min[0m[2m failed-*) [0m[2m[34mprintf[0m[2m uncommitted [0m[2m[36m>[0m[2m dirty.txt ;; [0m[2m[35mesac[0m
[0m[36m◎[39m [36mRemoving [1mfailed-a[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[31m✗[39m [31mCannot remove worktree: [1mfailed-a[22m has uncommitted changes[39m
[107m [0m ?? dirty.txt
[2m↳[22m [2mCommit or stash changes first, or to lose uncommitted changes, run [4mwt remove --force failed-a[24m[22m
[36m◎[39m [36mRunning pre-remove project hook @ [1m_REPO_.valid[22m[39m
[107m [0m [2m[0m[2m[35mcase[0m[2m [0m[2m[32m'valid'[0m[2m [0m[2m[35min[0m[2m failed-*) [0m[2m[34mprintf[0m[2m uncommitted [0m[2m[36m>[0m[2m dirty.txt ;; [0m[2m[35mesac[0m
[0m[36m◎[39m [36mRemoving [1mvalid[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[36m◎[39m [36mRunning pre-remove project hook @ [1m_REPO_.failed-b[22m[39m
[107m [0m [2m[0m[2m[35mcase[0m[2m [0m[2m[32m'failed-b'[0m[2m [0m[2m[35min[0m[2m failed-*) [0m[2m[34mprintf[0m[2m uncommitted [0m[2m[36m>[0m[2m dirty.txt ;; [0m[2m[35mesac[0m
[0m[36m◎[39m [36mRemoving [1mfailed-b[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[31m✗[39m [31mCannot remove worktree: [1mfailed-b[22m has uncommitted changes[39m
[107m [0m ?? dirty.txt
[2m↳[22m [2mCommit or stash changes first, or to lose uncommitted changes, run [4mwt remove --force failed-b[24m[22m
[2m○[22m No worktree found for branch [1mbranch-only[22m
[32m✓ Removed branch [1mbranch-only[22m (same commit as [1mmain[22m,[39m [2m_[22m[32m)[39m
[36m◎[39m [36mRunning pre-remove project hook[39m
[107m [0m [2m[0m[2m[35mcase[0m[2m [0m[2m[32m'current'[0m[2m [0m[2m[35min[0m[2m failed-*) [0m[2m[34mprintf[0m[2m uncommitted [0m[2m[36m>[0m[2m dirty.txt ;; [0m[2m[35mesac[0m
[0m[36m◎[39m [36mRemoving [1mcurrent[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[33m▲[39m [33mWorktree for [1mmain[22m @ [1m_REPO_[22m, but cannot change directory — shell integration not installed[39m
[2m↳[22m [2mTo enable automatic cd, run [4mwt config shell install[24m[22m
[2m↳[22m [2mCurrent directory was removed; to see worktrees, run [4mwt list[24m[22m
